EOD 22_07_2024